--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -48,8 +48,8 @@ brews:
       owner: steadybit
       name: homebrew-steadybit-debug
     commit_author:
-      name: bripkens
-      email: ben.blackmore@steadybit.com
+      name: ansgarschulte
+      email: ansgar@steadybit.com
     folder: Formula
     homepage: https://github.com/steadybit/steadybit-debug
     description: Tool to gather debugging information from (on-premise) Steadybit platforms and agents
