--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,21 +2,17 @@ name: Release
 
 on:
   push:
-    # run only against tags
     tags:
       - 'v*'
 
 permissions:
   contents: write
-  # packages: write
-  # issues: write
 
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -26,13 +22,21 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.18.0'
+          go-version: '1.21'
 
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v4
+        uses: goreleaser/goreleaser-action@v5
         with:
           distribution: goreleaser
           version: latest
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+
+      - name: Snyk monitor
+        uses: snyk/actions/golang@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --project-name=${{ github.repository }} --target-reference=${{ inputs.target_ref || github.ref_name }}
+          command: monitor
