--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.18.0'
+          go-version: '1.21'
 
       - name: Build & Test
         run: |
@@ -22,3 +22,10 @@ jobs:
           go build .
           go test ./...
 
+      - name: Snyk test
+        uses: snyk/actions/golang@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --project-name=${{ github.repository }} --target-reference=${{ inputs.target_ref || github.ref_name }}
+          command: monitor
