--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,3 +28,4 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: test
+          args: --severity-threshold=high
